...
    <string name="external_multiple_apps_matched_exit">Exit Private Browsing?</string>

    <!-- The page html title (i.e. the <title> tag content) -->
    <string name="errorpage_title">Problem loading page</string>
    <string name="errorpage_refresh">Try Again</string>

    <string name="your_rights">Your Rights</string>

    <!-- Text shown in the "Your rights" screen.
    %1$s will be replaced with the name of the app (e.g. Firefox for Fire TV)-->
    <string name="your_rights_content1"><![CDATA[%1$s is free and open source software made by Mozilla and other contributors.]]></string>

    <!-- Text shown in the "Your rights" screen.
...
    <string name="your_rights_content5"><![CDATA[%1$s also uses blocklists provided by Disconnect, Inc. as separate and independent works under the <a href="%2$s">GNU General Public License v3</a>, and available <a href="%3$s">here</a>.]]></string>

    <!-- Firefox for Fire TV
    video strings -->
    <!-- Settings strings -->
    <string name="settings_cookies_dialog_title">Clear all cookies and site data</string>
    <string name="settings_cookies_dialog_content2">This will clear all cookies and site data. Clearing this information may sign you out of websites and delete web content that is stored offline.</string>
    <!-- Text on a button that, when pressed, will clear all user data.
    Mock: https://user-images.githubusercontent.com/1721875/47298531-59442f00-d618-11e8-98df-632f74e9ebc3.png -->
    <string name="settings_cookies_confirm">Clear now</string>

    <!-- Title for a screen that explains the purpose of our telemetry, and contains a
    switch that can toggle it on and off
...
    <string name="button_turbo_mode_turn_off2">Turn Turbo Mode off</string>
    <!-- Spoken to screen reader users to explain image on Turbo mode onboarding -->
    <string name="turbo_mode_image_a11y">Example of Turbo Mode enabled</string>

    <!-- Text displayed in a toast to explain to the user how to unpin a tile from the homescreen.
         SELECT refers to a button on the remote: the button at the center of the 4-way directional navigation. -->
    <string name="homescreen_unpin_tutorial_toast">Press and hold SELECT to unpin from homescreen</string>
    <string name="homescreen_tile_remove">Remove</string>

    <!-- The title of Pinned channel remove modal.
    %1$s will be replaced by the title of tiles (website titles or url). -->
    <string name="pinned_tiles_channel_remove_title">Remove %1$s from Pinned sites</string>

    <!-- Title text displayed above the pinned tile channel. Pinned tiles are a collection of links
...
    <string name="pinned_tile_channel_title">Pinned Tiles</string>

    <string name="pin_label">Pin to homescreen</string>
    <!-- Label shown underneath Pin icon in toolbar when a site is already pinned, to hint to users that
         they can unpin the site to remove it-->
    <string name="unpin_label">Unpin from homescreen</string>
    <string name="notification_pinned_site">Pinned to Firefox TV homescreen</string>
    <string name="notification_unpinned_site">Removed from Firefox TV homescreen</string>

    <!-- The title of a tutorial shown to introduce Pocket video recommendations.
    %1$s will be replaced with the Pocket brand name. -->
    <string name="pocket_home_tutorial_title">Introducing videos recommended by %1$s</string>
    <!-- The description text of a tutorial shown to introduce Pocket video recommendations.
    %1$s will be replaced with the Pocket brand name. -->
...
