...
        android:id="@+id/navButtonReload"
        style="@style/NavigationButton"
        android:src="@drawable/mozac_ic_refresh"
        android:contentDescription="@string/content_description_reload"/>

    <org.mozilla.tv.firefox.widget.CheckableImageButton
        android:id="@+id/pinButton"
        style="@style/NavigationButton"
        android:src="@drawable/pin_selector"
        android:contentDescription="@string/pin_label"/>

    <org.mozilla.tv.firefox.widget.CheckableImageButton
        android:id="@+id/turboButton"
...
