<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.mozilla.tv.firefox.onboarding.OnboardingActivity"
    tools:showIn="@layout/activity_onboarding">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left_quarter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right_quarter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".75" />

    <!-- src and content description set programmatically -->
    <ImageView
        android:id="@+id/turbo_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/photonGrey70"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/turbo_image_view" />

    <!-- text set programmatically -->
    <TextView
        android:id="@+id/turbo_mode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@string/font_ember_light"
        android:textColor="@color/photonGrey10_a80p"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@id/onboarding_main_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/turbo_image_view"
        app:layout_constraintVertical_bias="0.36"
        app:layout_constraintVertical_chainStyle="packed" />

    <!-- text set programmatically -->
    <TextView
        android:id="@+id/onboarding_main_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@string/font_ember_regular"
        android:lineSpacingExtra="2sp"
        android:textAlignment="center"
        android:textColor="@color/photonGrey10_a80p"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/enable_turbo_mode"
        app:layout_constraintEnd_toEndOf="@id/guideline_right_quarter"
        app:layout_constraintStart_toStartOf="@id/guideline_left_quarter"
        app:layout_constraintTop_toBottomOf="@+id/turbo_mode_title" />

    <!-- text set programmatically -->
    <Button
        android:id="@+id/enable_turbo_mode"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/turbo_button_enable"
        android:fontFamily="@string/font_ember_regular"
        android:minWidth="@dimen/onboarding_button_width"
        android:minHeight="@dimen/onboarding_button_height"
        android:text="@string/button_turbo_mode_keep_enabled2"
        android:textAllCaps="false"
        android:textColor="@color/photonGrey10"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/disable_turbo_mode"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboarding_main_text">

        <requestFocus />
    </Button>

    <!-- text set programmatically -->
    <Button
        android:id="@id/disable_turbo_mode"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/turbo_button_disable"
        android:fontFamily="@string/font_ember_regular"
        android:minWidth="@dimen/onboarding_button_width"
        android:minHeight="@dimen/onboarding_button_height"
        android:text="@string/button_turbo_mode_turn_off2"
        android:textAllCaps="false"
        android:textColor="@color/photonGrey10"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/enable_turbo_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/enable_turbo_mode"
        app:layout_constraintTop_toTopOf="@id/enable_turbo_mode" />

</androidx.constraintlayout.widget.ConstraintLayout>
