...
    <!-- We need to make this view larger than its children to allow the children to scale when
         focused (clipChildren alone doesn't work) so we add vertical padding and center gravity.
         We need 8dp+ of vertical padding to not clip the children at the current scale ratio.

         We add horizontal padding to the start and end item in code: see onBind for details. -->
    <androidx.leanback.widget.ListRowView
        android:id="@+id/videoFeed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14.5dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center_vertical"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recommendedTitle"
        tools:listitem="@layout/pocket_video_item"
        />

    <View
        android:id="@+id/headerBackgroundView"
        android:layout_width="0dp"
...
